Fix - corrected transition of .footer__link--mailto - previously only worked on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -1098,19 +1098,20 @@ header {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -2px;
-  width: 100%;
-  height: 2px;
-  background: var(--clr-light);
-  transform: scaleX(0%);
+  right: 0;
+  bottom: -1px;
+
+  height: 0;
+  border-bottom: 2px solid var(--clr-light);
+
+  transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.3s ease;
 }
 
 .footer__link--mailto:hover .email:after {
+  transform: scaleX(1);
   transform-origin: left;
-  transform: scaleX(100%);
-  /* text-decoration: underline; */
 }
 
 .social-list {
